--- a/views/login.pug
+++ b/views/login.pug
@@ -3,13 +3,9 @@ extends layout
 block content
     h3 Name Entry
     form(id='form', method='post', action='/')
-      label First Name:
+      label UserName:
       br
-      input(type='text', name='firstName')
-      br
-      label Last Name:
-      br
-      input(type='text', name='lastName')
+      input(type='text', name='userame')
       br
       label Password:
       br
