--- a/views/create.pug
+++ b/views/create.pug
@@ -14,25 +14,25 @@ block content
     label(for='age') Password: 
     input(type='text', name='password')
     br
-    label(for='Q1') ?: 
+    label(for='Q1') when did halo first release?: 
     select(name='Q1')
-      option(value="") 
-      option(value="") 
-      option(value="") 
-      option(value="") 
+      option(value="") 2000
+      option(value="") 2001
+      option(value="") 2002
+      option(value="") 2003
     br
-    label(for='Q2') ?: 
+    label(for='Q2') Can a match box?: 
     select(name='Q2')
-      option(value="") 
-      option(value="") 
-      option(value="") 
-      option(value="") 
+      option(value="") No, but a tin can
+      option(value="") What?
+      option(value="") Maybe
+      option(value="") Yes
     br
-    label(for='Q3') ?: 
+    label(for='Q3') which word is spelled incorrectly in the dictionary?: 
     select(name='Q3')
-      option(value="") 
-      option(value="") 
-      option(value="") 
-      option(value="") 
+      option(value="") Spelled
+      option(value="") Dictionary
+      option(value="") Your
+      option(value="") Incorrectly
     br
     input(type='submit', value='Add Person')
