--- a/views/index.pug
+++ b/views/index.pug
@@ -1,22 +1,4 @@
 extends layout
 
 block content
-  table(class='gridtable')
-    tr
-      th Id
-      th Name
-      th 
-      th 
-    each item in people
-      tr
-        td
-          a(href='/details/' + item.id) #{item.id}
-        td #{item.username}
-        td
-          a(href='/edit/' + item.id) Edit
-        td
-          a(href='/delete/' + item.id) Delete
-
-  p
-  #menu
-    a(href='/create') Add new person
+  p Welcome #{username}
