--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,17 @@
 extends layout
 
 block content
-  p Welcome #{username}
+  h3 Name Entry
+    form(id='form', method='post', action='/')
+      label UserName:
+      br
+      input(type='text', name='userame')
+      br
+      label Password:
+      br
+      input(type='password', name='pass')
+      br
+      input(type='submit', value='submit')
+  p
+  #menu
+    a(href='/create') Create a new account
