added mongoose and small changes to routes and details

--- a/views/details.pug
+++ b/views/details.pug
@@ -1,10 +1,9 @@
 extends layout
 
 block content
-  p Name: #{person.name}
+  p UserName: #{person.username}
   p Age: #{person.age}
-  p Species: #{person.species}
-  p Color: #{person.color}
+  p Email: #{person.email}
   br
   #menu
     a(href='/') Go back
