--- a/views/create.pug
+++ b/views/create.pug
@@ -16,23 +16,23 @@ block content
     br
     label(for='Q1') when did halo first release?: 
     select(name='Q1')
-      option(value="") 2000
-      option(value="") 2001
-      option(value="") 2002
-      option(value="") 2003
+      option(value="answer1") 2000
+      option(value="answer2") 2001
+      option(value="answer3") 2002
+      option(value="answer4") 2003
     br
     label(for='Q2') Can a match box?: 
     select(name='Q2')
-      option(value="") No, but a tin can
-      option(value="") What?
-      option(value="") Maybe
-      option(value="") Yes
+      option(value="answer1") No, but a tin can
+      option(value="answer2") What?
+      option(value="answer3") Maybe
+      option(value="answer4") Yes
     br
     label(for='Q3') which word is spelled incorrectly in the dictionary?: 
     select(name='Q3')
-      option(value="") Spelled
-      option(value="") Dictionary
-      option(value="") Your
-      option(value="") Incorrectly
+      option(value="answer1") Spelled
+      option(value="answer2") Dictionary
+      option(value="answer3") Your
+      option(value="answer4") Incorrectly
     br
     input(type='submit', value='Add Person')
