--- a/views/index.pug
+++ b/views/index.pug
@@ -5,11 +5,11 @@ block content
     form(id='form', method='post', action='/')
       label UserName:
       br
-      input(type='text', name='userame')
+      input(type='text', name='userame', required)
       br
       label Password:
       br
-      input(type='password', name='pass')
+      input(type='password', name='pass', required)
       br
       input(type='submit', value='submit')
   p
