--- a/views/home.pug
+++ b/views/home.pug
@@ -3,3 +3,9 @@ extends layout
 block content
   p Welcome #{username}
   script(src="script.js")
+  p
+  #menu
+    a(href='/edit') Edit User
+  p
+  #menu
+    a(href='/details') Details for User
