--- a/views/details.pug
+++ b/views/details.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  p UserName: #{person.username}
+  p Username: #{person.username}
   p Age: #{person.age}
   p Email: #{person.email}
   br
