--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,5 +4,5 @@ html
     title=title
     link(href='/styles/style.css', rel='stylesheet')
   body
-    h3=title
+    h3#title=title
     block content
