--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-  h3 Name Entry
+  h3
+    p#nameentry Name Entry
     form(id='form', method='post', action='/')
       label UserName:
       br
@@ -11,7 +12,6 @@ block content
       br
       input(type='password', name='pass', required)
       br
-      input(type='submit', value='submit')
-  p
-  #menu
-    a(href='/create') Create a new account
+      input(id = 'butt' type='submit', value='Submit')
+  p#menu
+    a(href='/create') Create A New Account
